# video-streaming-service

./: CMakeLists.txt  LICENSE  Makefile  README.md  client.cpp  config.h  server.cpp
