cmake_minimum_required(VERSION 2.8)
project( obligatorio2 )
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( server server.cpp )
target_link_libraries( server ${OpenCV_LIBS} )
add_executable( client client.cpp )
target_link_libraries( client ${OpenCV_LIBS} )
find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(server PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(server "${CMAKE_THREAD_LIBS_INIT}")
endif()
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(client PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(client "${CMAKE_THREAD_LIBS_INIT}")
endif()
set(CMAKE_CXX_FLAGS "-std=c++11")
